<resources>
    <string name="app_name">My Movies UI/UX</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="more_info">More Info</string>
    <string name="description">Description</string>
    <string name="date_release">Date Release</string>
    <string name="title_movie">Movie Title</string>
    <string name="image">Image</string>
    <string name="language_setting">Language Setting</string>
    <string name="language">Language</string>
    <string name="duration">Runtime</string>
    <string name="genres">Genres</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="synopsis">Synopsis</string>
    <string name="season">Current Season</string>
    <string name="data_language">English</string>
    <string-array name="data_name">
        <item>Avengers: Infinity War</item>
        <item>Jurassic Galaxy</item>
        <item>Deadpool 2</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Black Panther</item>
        <item>The Grinch</item>
        <item>Mission: Impossible - Fallout</item>
        <item>Solo: A Star Wars Story</item>
        <item>Venom</item>
        <item>Bohemian Rhapsody</item>
    </string-array>
    <string-array name="data_photo">
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/7WsyChQLEftFiDOVTGkv3hFpyyt.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/uo7u2bRW6KPPe4ipTUqx5RZ9rwC.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/to0spRl1CMDvyUbOnbb4fTk3VAd.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/iiZZdoQBEYBv6id8su7ImL0oCbD.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/uxzzxijgPIY7slzFvMotPv8wjKA.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/smxA8yvZ0LzDPer9BIRd4pyOpx1.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/AkJQpZp9WoNdj7pLYSj1L0RcMMN.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/3IGbjc5ZC5yxim5W0sFING2kdcz.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/2uNW4WbgBXL25BAbXGLnLqX71Sw.jpg</item>
        <item>https://image.tmdb.org/t/p/w600_and_h900_bestv2/lHu1wtNaczFPGFDTrjCSzeLPTKN.jpg</item>
    </string-array>
    <string-array name="data_date">
        <item>April 25, 2018</item>
        <item>August 20, 2018</item>
        <item>May 10, 2018</item>
        <item>December 6, 2018</item>
        <item>February 13, 2018</item>
        <item>November 8, 2018</item>
        <item>July 13, 2018</item>
        <item>May 15, 2018</item>
        <item>September 28, 2018</item>
        <item>October 24, 2018</item>
    </string-array>
    <string-array name="data_description">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>The Galileo spaceship crashes on the wild and inhospitable surface of a barren planet somewhere in the depths of space. A handful of mismatched survivors (a security officer, the edgy flight commander, a floating circular robot thing and a few faceless randoms) realize that their only possible way of escape is to locate the downed ship\'s short-hop shuttle pod. </item>
        <item>Foul-mouthed mutant mercenary Wade Wilson (a.k.a. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg Cable.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson \"Kingpin\" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>King T\'Challa returns home from America to the reclusive, technologically advanced African nation of Wakanda to serve as his country\'s new leader. However, T\'Challa soon finds that he is challenged for the throne by factions within his own country as well as without. Using powers reserved to Wakandan kings, T\'Challa assumes the Black Panther mantel to join with girlfriend Nakia, the queen-mother, his princess-kid sister, members of the Dora Milaje (the Wakandan \'special forces\') and an American secret agent, to prevent Wakanda from being dragged into a world war.</item>
        <item>For their eighth fully animated feature, Illumination and Universal Pictures present The Grinch, based on Dr. Seuss\' beloved holiday classic. The Grinch tells the story of a cynical grump who goes on a mission to steal Christmas, only to have his heart changed by a young girl\'s generous holiday spirit. Funny, heartwarming, and visually stunning, it\'s a universal story about the spirit of Christmas and the indomitable power of optimism.</item>
        <item>When an IMF mission ends badly, the world is faced with dire consequences. As Ethan Hunt takes it upon himself to fulfill his original briefing, the CIA begin to question his loyalty and his motives. The IMF team find themselves in a race against time, hunted by assassins while trying to prevent a global catastrophe.</item>
        <item>With the emerging demand of hyperfuel and other resources, Han Solo finds himself in the middle of a heist alongside other criminals, where they meet the likes of Chewbacca and Lando Calrissian in an adventurous situation exposing the criminal underworld.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
    </string-array>
    <string-array name="data_duration">
        <item>2h 29m</item>
        <item>1h 16m</item>
        <item>2h 1m</item>
        <item>1h 57m</item>
        <item>2h 14m</item>
        <item>1h 30m</item>
        <item>2h 28m</item>
        <item>2h 15m</item>
        <item>1h 52m</item>
        <item>2h 15m</item>
    </string-array>
    <string-array name="data_genre">
        <item>Adventure, Action, Science Fiction</item>
        <item>Science Fiction, Action, Adventure</item>
        <item>Action, Comedy, Adventure</item>
        <item>Action, Adventure, Animation, Science Fiction, Comedy</item>
        <item>Action, Adventure, Fantasy, Science Fiction</item>
        <item>Animation, Family, Comedy, Fantasy</item>
        <item>Action, Adventure</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Science Fiction, Action</item>
        <item>Drama, Music</item>
    </string-array>
    <string-array name="data_title">
        <item> Lost in Space (2018)</item>
        <item> YOU (2018) </item>
        <item> Legacies (2018) </item>
        <item> Alexa &amp; Katie (2018) </item>
        <item> Black Lightning (2018) </item>
        <item> The Resident (2018) </item>
        <item> Titans (2018) </item>
        <item> Killing Eve (2018) </item>
        <item> Altered Carbon (2018) </item>
        <item> Chilling Adventures of Sabrina (2018) </item>
    </string-array>
    <string-array name="data_genretv">
        <item>Sci-Fi, Fantasy, Action, Adventure, Drama</item>
        <item>Crime, Drama</item>
        <item>Sci-Fi, Fantasy, Drama</item>
        <item>Comedy</item>
        <item>Action, Adventure, Sci-Fi, Fantasy, Drama</item>
        <item>Drama</item>
        <item>Action, Adventure, Sci-Fi, Fantasy, Drama</item>
        <item>Crime, Drama</item>
        <item>Science Fiction, Fantasy</item>
        <item>Mystery, Sci-Fi, Fantasy, Drama</item>
    </string-array>
    <string-array name="data_durationtv">
        <item>56m</item>
        <item>46m</item>
        <item>43m</item>
        <item>25m</item>
        <item>45m</item>
        <item>42m</item>
        <item>43m</item>
        <item>43m</item>
        <item>60m</item>
        <item>60m</item>
    </string-array>
    <string-array name="data_seasontv">
        <item>Season 2</item>
        <item>Season 2</item>
        <item>Season 2</item>
        <item>Season 3</item>
        <item>Season 3</item>
        <item>Season 3</item>
        <item>Season 2</item>
        <item>Season 2</item>
        <item>Season 1</item>
        <item>Season 2</item>
    </string-array>
</resources>